# buzzbot-ai

./: README.md  config.py  graph.py  main.py  pyproject.toml  state.py
agents/: analysis_agent.py  compiler_agent.py  events_agent.py  jobs_agent.py  news_agent.py  prompt_agent.py  research_agent.py  tools_agent.py  youtube_agent.py
documents/: README.md  architecture.md  configuration.md  setup-and-install.md
format/: ai_newsletter_format.md
outputs/: newsletter_issue_1_2026-03-27.md
template/: ai_weekly_newsletter_template.md
templates/: newsletter.j2
tools/: arxiv_tools.py  tavily_tools.py  youtube_tools.py
