    [project]
    name = "buzzbot-ai"
    version = "0.1.0"
    description = "AI Newsletter Multi-Agent System powered by LangGraph + AWS Bedrock"
    readme = "README.md"
    requires-python = ">=3.13"
    dependencies = [
        # LangChain / LangGraph ecosystem
        "langchain>=0.3.0",
        "langchain-core>=0.3.0",
        "langchain-aws>=0.2.0",
        "langgraph>=0.2.0",
        # Data sources
        "tavily-python>=0.5.0",
        "arxiv>=2.1.0",
        "google-api-python-client>=2.150.0",
        # Infrastructure
        "boto3>=1.35.0",
        "python-dotenv>=1.0.0",
        # Rendering & output
        "rich>=13.9.0",
        "jinja2>=3.1.4",
    ]
